src/css/style.css
:root {
  --main-bg-color: #181f33;
  --dark-bg-color: #0d111c;
  --light-bg-color: #283456;
  --hover-bg-color: #232d4a;
  --cell-color: #131827;
  --text-color: #f4f4f4;
  --primary-color: #0c8aef;
  --green-color: #07e092;
  --red-color: #fd6579;
  --orange-color: #f6a259;
}

body {
  color: var(--text-color);
  background-color: var(--main-bg-color);
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.header {
  display: grid;
  grid-template-columns: 15% 1fr 20%;
  height: 80px;
}
@media (max-width: 992px) {
  .header {
    grid-template-columns: 20% 1fr;
  }
}
@media (max-width: 768px) {
  .header {
    display: flex;
    flex-direction: column;
    height: auto;
  }
}
.header_title {
  display: flex;
  align-items: center;
  padding: 0 20px;
  font-size: 1.2em;
}

.main {
  height: calc(100vh - 80px);
  overflow: hidden;
}

.main_wrapper {
  height: 100%;
  overflow: auto;
}

.main_wrapper::-webkit-scrollbar {
  width: 0;
}

.text-input {
  height: 32px;
  width: 100%;
  padding: 0 10px;
  background: var(--hover-bg-color);
  color: var(--primary-color);
  border: none;
  border-radius: 6px;
}

.text-input:focus {
  outline: 1px solid var(--primary-color);
}

.btn {
  height: 32px;
  border: none;
  border-radius: 6px;
  cursor: pointer;
}

.btn:focus {
  outline: 1px solid var(--primary-color);
}

.btn--outline {
  box-sizing: border-box;
  background: var(--light-bg-color);
  color: var(--primary-color);
}

.btn--outline:hover {
  background: var(--primary-color);
  color: #0d111c;
}

.btn-toggle {
  display: flex;
  width: 60px;
  height: 29px;
  padding: 2px;
  background-color: var(--hover-bg-color);
  border-radius: 15px;
}
.btn-toggle--on {
  justify-content: flex-end;
}
.btn-toggle--on .btn-toggle_circle {
  background-color: var(--primary-color);
}
.btn-toggle_circle {
  width: 25px;
  height: 25px;
  background-color: #fff;
  border-radius: 50%;
  left: 100%;
}

.theme-switcher {
  position: fixed;
  top: 10px;
  right: 10px;
}

@media (max-width: 992px) {
  .theme-switcher {
    display: none;
  }
}

